# Smart-Photo-Organizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py
app/: main.py  ui.py
app/data/: geocode_cache.json
app/detectors/: face_detection.py  object-detection.py
app/expermental/: face-recognize.py
app/utils/: geocode.py  metadata.py  scene_tags.py  zip_utils.py
data/: geocode_cache.json  metadata.json  metadata_with_location.json
ui/: test.py
utils/: face-recognize.py  face_detection.py  geocode.py  metadata.py  object-detection.py  scene_tags.py
